namespace ATM.UI;

public enum UserAction {
    CheckBalance,
    Withdraw,
    Exit,
    Unknown 
}